src/test/deca/test_compilateur/context/valid/created/decl_class/super_variable.deca
// Description :
//    utilisation d'un super field (protected) dans une methode
//
// Resultats :
//		Ok

class C{
protected int a;
}

class B extends C{
int met(){
	return a;
}
}
