src/test/deca/test_compilateur/context/invalid/created/acces_field/field_protected_inside_class.deca
// Description :
//    acces à un field protegé à l'intérieur d'un methode
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 13 :(3.65) L’attribut est protégé


class A{
	protected int x;
}
class B extends A{

	void met(A a){
		a.x;
	}
}

